--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   pedometer: ^3.0.0
   firebase_core: ^2.12.0
+  cloud_firestore: ^4.3.2
+  firebase_auth: ^4.6.0
+  firebase_ui_auth: ^1.4.0
 
 dev_dependencies:
   flutter_test:
