--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   cloud_firestore: ^4.3.2
   firebase_auth: ^4.6.0
   firebase_ui_auth: ^1.4.0
+  firebase_database: ^10.2.1
+
+
 
 dev_dependencies:
   flutter_test:
