--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,12 @@ dependencies:
   firebase_auth: ^4.6.0
   firebase_ui_auth: ^1.4.0
   firebase_database: ^10.2.1
-
+  flutter_local_notifications: ^14.0.0+2
+  device_info_plus: ^9.0.0
+  flutter_timezone: ^1.0.6
+  image: ^4.0.17
+  path_provider: ^2.0.15
+  date_range_picker: ^1.0.4
 
 
 dev_dependencies:
