--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,11 @@ dependencies:
   flutter_timezone: ^1.0.6
   image: ^4.0.17
   path_provider: ^2.0.15
-  date_range_picker: ^1.0.4
+  syncfusion_flutter_charts: ^21.2.5
+  shared_preferences: ^2.1.1
 
+
+ 
 
 dev_dependencies:
   flutter_test:
